--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/home']">Home</a>
+        <a class="nav-link" (click)="qwert()" [routerLink]="['/home']">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/profile']">Profile</a>
